add face recognition images

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,11 @@
     <!-- Navigation Bar -->
     <nav class="bg-yellow-200 p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <a class="text-white font-bold text-xl" href="/">My Website</a>
+            <a class="text-black font-bold text-xl" href="/">Emotion Recognition</a>
             <div class="space-x-4">
-                <a class="text-gray-300 hover:text-white" href="/">Home</a>
-                <a class="text-gray-300 hover:text-white" href="/emotion_recognition">Emotion Recognition</a>
-                <a class="text-gray-300 hover:text-white" href="/article">Article</a>
+                <a class="text-black-300 hover:text-black" href="/">Home</a>
+                <a class="text-black-300 hover:text-black" href="/emotion_recognition">Emotion Recognition</a>
+                <a class="text-black-300 hover:text-black" href="/article">Article</a>
             </div>
         </div>
     </nav>
