--- a/templates/article.html
+++ b/templates/article.html
@@ -2,7 +2,7 @@
 {% block title %}article{% endblock %}
 {% block content %}
 <div class="text-center">
-    <h1 class="text-4xl font-bold text-gray-800 mb-4">Welcome to the Home Page</h1>
+    <h1 class="text-4xl font-bold text-gray-800 mb-4">Selamat Datang di Emotion Recognition Web App</h1>
     <p class="text-gray-600 text-lg">This is the home page of the website, styled with Tailwind CSS.</p>
     <a href="/about" class="mt-6 inline-block px-6 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">Learn More About Us</a>
 </div>
