--- a/templates/emotion_recognition.html
+++ b/templates/emotion_recognition.html
@@ -1,45 +1,137 @@
 {% extends "base.html" %}
 {% block title %}Article{% endblock %}
 {% block content %}
-<div class="mx-20">
-
-    <div id="fileInput" class="text-center px-40">
-        <h1 class="text-3xl font-bold mb-10 text-gray-700">Upload File</h1>
-        <div class="container justify-center mx-auto min-w-full mt-12 mb-12 p-7 bg-gray-200 shadow-lg rounded-lg">
-            <!-- Input File -->
-            <div class="text-center mx-10 ">
-                <div class="items-center ">
-                    <!-- Petunjuk -->
-                    <div class="text-center mb-6 w-full sm:w-1/2 sm:mb-0 bg-lightgreen w-full mb-10 relative border-2 border-darkgreen mx-auto rounded-lg">
-                        <h2 class="text-xl font-semibold text-gray-700 mb-4">Petunjuk</h2>
-                        <p class="text-sm text-gray-600">
-                            Pilih file gambar dari perangkat Anda untuk mengunggah.
-                            Format yang didukung: <span class="font-medium">JPG, PNG</span>.
-                        </p>
-                    </div>
-
-                    <!-- Input File -->
-                    <div class="text-center mt-6 w-full sm:w-1/2 sm:mb-0  w-full mb-10 relative  mx-auto rounded-lg">
-                        <input
-                            type="file"
-                            accept="image/*"
-                            id="filei"
-                            class="block w-full p-3 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500"
-                        >
-                        <p class="mt-2 text-sm text-gray-500">Maksimal ukuran file: 5MB.</p>
-                    </div>
-                </div>
+<div class="max-w-7xl mx-auto py-16 space-y-12">
+    <div class="flex space-x-12 items-center">
+        <div class="w-2 h-16 bg-[#FFCB39] rounded-lg"></div>
+        <div class="grid-rows-2">
+            <div class="text-xl font-semibold">
+                Deteksi Penyakit
+            </div>
+            <div>
+                Periksa penyakit tanaman jagung Anda!
             </div>
         </div>
     </div>
+    <div class="max-w-5xl mx-auto bg-[#E6F1E8] rounded-2xl p-8 space-y-4 shadow-xl mb-20 mt-10">
+        <form id="upload-form" action="/detection" method="POST" enctype="multipart/form-data" class="space-y-6">
+            <div class="font-bold text-lg">Deteksi</div>
+            <div class="font-light text-sm">Tambahkan foto di sini, maksimal 10MB</div>
+            <div class="w-full h-80 bg-white rounded-lg border-2 border-dashed border-[#FFCB39] flex flex-col items-center justify-center space-y-4">
+                <img src="static/images/folder.png" alt="Folder Icon" class="w-16 h-16">
+                <span class="font-medium">Upload foto daun jagung yang ingin dideteksi</span>
+                <!-- Tombol kustom untuk memilih file -->
+                <label for="file-upload" class="bg-white text-[#FFCB39] border-2 border-[#FFCB39] font-medium px-4 py-2 rounded-lg hover:bg-[#FFCB39] hover:text-white cursor-pointer">
+                Pilih File
+                </label>
+                <!-- Input file tersembunyi -->
+                <input type="file" name="file" id="file-upload" class="hidden" />
+                <!-- Informasi file yang dipilih -->
+                <span id="file-name" class="text-gray-500 text-sm"></span>
+            </div>
+            <button type="submit" class="bg-[#FFCB39] text-white font-medium px-6 py-3 rounded-lg hover:bg-[#E6B832]">
+                Deteksi
+            </button>
+        </form>
 
-    <!-- Gambar Hasil -->
-    <div id="captured" class="container mx-auto mt-12 p-6 hidden mx-10 text-center ">
-        <h1 class="text-3xl font-bold mb-10 text-gray-700">Preview</h1>
-        <img id="capturedImage" class="w-1/2 aspect-square object-cover mx-auto sm:w-1/2 mx-auto rounded-lg" alt="Captured Image">
-        <a href="/result" class="mt-4 inline-block bg-gray-700 hover:bg-gray-300 text-white rounded-lg px-4 py-2">Analyze</a>
+        <!-- Tampilkan Error -->
+        {% if error %}
+            <div class="text-red-500 mt-4">{{ error }}</div>
+        {% endif %}
     </div>
 
-    <script src="{{ url_for('static', filename='./javascript/emotion_recognition.js') }}"></script>
+    <!-- Tampilkan Hasil Deteksi -->
+    {% if predicted_class %}
+    <div class="flex space-x-12 items-center pt-12">
+        <div class="w-2 h-16 bg-[#FFCB39] rounded-lg"></div>
+        <div class="grid-rows-2">
+            <div class="text-xl font-semibold">
+                Deteksi Penyakit
+            </div>
+            <div>
+                Hasil Diagnosa
+            </div>
+        </div>
+    </div>
+    <!-- Informasi Prediksi -->
+    <div class="flex w-full h-16 p-4 rounded-2xl items-center shadow-xl {% if predicted_class == 'Healthy' %}bg-healthy{% else %}bg-disease{% endif %}">
+        <svg class="w-12 h-12" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="10" fill="#FFCB39" />
+            <path fill="#FFFFFF" d="M15.707 10.707a1 1 0 0 0-1.414-1.414L11 12.586l-1.793-1.793a1 1 0 0 0-1.414 1.414l2.5 2.5a1 1 0 0 0 1.414 0l4-4Z" />
+        </svg>
+        {% if predicted_class == 'Angry' %}
+        <div class="flex justify-between items-center w-full">
+            <div class="text-white font-bold ml-4 text-lg">Yayy, Tanaman kamu Sehat/{{ predicted_class }}</div>
+            <div class="text-white text-right mr-4">Confidence score : {{confidence_score}}</div>
+        </div>
+        {% else %}
+        <div class="flex justify-between items-center w-full">
+            <div class="text-white font-bold ml-4 text-lg">Gawat!! Tanaman kamu terkena penyakit {{ predicted_class }}</div>
+            <div class="text-white text-right mr-4">Confidence score : {{confidence_score}}</div>
+        </div>
+        {% endif %}
+    </div>
+    <!-- Rekomendasi Tips -->
+    <div class="w-full grid grid-cols-2 gap-4">
+        <div class="bg-white h-[450px] rounded-2xl shadow-xl">
+            <img src="data:image/png;base64,{{ img_base64 }}" alt="Uploaded Image" class="w-full h-full rounded-2xl">
+        </div>
+        <div class="h-[450px] rounded-2xl py-8 shadow-xl {% if predicted_class == 'Healthy' %}bg-healthy{% else %}bg-disease{% endif %}">
+            <div class="flex items-center px-4">
+                <img src="static/images/idea.png" alt="">
+                <div class="text-xl text-white font-bold">{{ handling_tip.title }}</div>
+            </div>
+            <div class="mt-4 text-white px-8">
+                <ul>
+                    {% for tip in handling_tip.tips %}
+                        <li>{{ tip }}</li>
+                    {% endfor %}
+                    <div class="mt-8">
+                        <a href="{{ url_for('information') }}" class="bg-white text-black border-2 border-[#FFCB39] font-medium px-4 py-2 rounded-lg hover:bg-[#FFCB39] hover:text-white cursor-pointer">
+                            Selengkapnya
+                        </a>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
+
+<div id="upload-warning" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-lg p-8 shadow-xl text-center">
+        <h2 class="text-xl font-semibold text-red-500 mb-4">File belum diunggah!</h2>
+        <p class="text-gray-600">Harap unggah file sebelum melanjutkan.</p>
+        <button id="close-warning" class="mt-4 bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600">
+            OK
+        </button>
+    </div>
+</div>
+
+
+<script>
+    const fileUpload = document.getElementById('file-upload');
+    const fileName = document.getElementById('file-name');
+    const form = document.getElementById('upload-form');
+    const warningModal = document.getElementById('upload-warning');
+    const closeWarning = document.getElementById('close-warning');
+
+    fileUpload.addEventListener('change', (event) => {
+        const file = event.target.files[0];
+        if (file) {
+            fileName.textContent = `File dipilih: ${file.name}`;
+        } else {
+            fileName.textContent = '';
+        }
+    });
+    form.addEventListener('submit', (event) => {
+        if (!fileUpload.files.length) {
+            event.preventDefault(); // Mencegah form terkirim
+            warningModal.classList.remove('hidden'); // Tampilkan modal
+        }
+    });
+    closeWarning.addEventListener('click', () => {
+        warningModal.classList.add('hidden'); // Sembunyikan modal
+    });
+</script>
 {% endblock %}
